--- a/spectrum/spectrum/spectrum.vbproj
+++ b/spectrum/spectrum/spectrum.vbproj
@@ -69,9 +69,10 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Canvas.vb" />
+    <Compile Include="CLI\CLI.vb" />
+    <Compile Include="Visualize\Canvas.vb" />
     <Compile Include="mzXML\XML.vb" />
-    <Compile Include="spectrumData.vb" />
+    <Compile Include="Visualize\spectrumData.vb" />
     <Compile Include="Program.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
