--- a/MwtWinDll/MwtWinDll/MwtWinDll.vbproj
+++ b/MwtWinDll/MwtWinDll/MwtWinDll.vbproj
@@ -114,6 +114,7 @@
     <Reference Include="System.Data">
       <Name>System.Data</Name>
     </Reference>
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Drawing">
       <Name>System.Drawing</Name>
     </Reference>
