--- a/MwtWinDll/MwtWinDll.Extensions/MwtWinDll.Extensions.vbproj
+++ b/MwtWinDll/MwtWinDll.Extensions/MwtWinDll.Extensions.vbproj
@@ -8,8 +8,8 @@
     <OutputType>Library</OutputType>
     <StartupObject>
     </StartupObject>
-    <RootNamespace>MwtWinDll.Extensions</RootNamespace>
-    <AssemblyName>MwtWinDll.Extensions</AssemblyName>
+    <RootNamespace>SMRUCC.proteomics.PNL.OMICS.MwtWinDll.Extensions</RootNamespace>
+    <AssemblyName>SMRUCC.proteomics.PNL.OMICS.MwtWinDll.Extensions</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>Windows</MyType>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
@@ -22,7 +22,7 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>MwtWinDll.Extensions.xml</DocumentationFile>
+    <DocumentationFile>SMRUCC.proteomics.PNL.OMICS.MwtWinDll.Extensions.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -32,7 +32,7 @@
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>MwtWinDll.Extensions.xml</DocumentationFile>
+    <DocumentationFile>SMRUCC.proteomics.PNL.OMICS.MwtWinDll.Extensions.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
