helper for merge the ms/ms data into one string value??

--- a/spectrum/Massbank/Massbank.vbproj
+++ b/spectrum/Massbank/Massbank.vbproj
@@ -86,6 +86,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PeakDataHelper.vb" />
     <Compile Include="DATA\Model.vb" />
     <Compile Include="Model.vb" />
     <Compile Include="RecordIO.vb" />
