--- a/MwtWinDll/MwtWinDll.Extensions/MwtWinDll.Extensions.vbproj
+++ b/MwtWinDll/MwtWinDll.Extensions/MwtWinDll.Extensions.vbproj
@@ -72,8 +72,8 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
-    <Reference Include="System.ValueTuple">
-      <HintPath>..\..\..\OMIM_CLI\OMIM\packages\System.ValueTuple.4.3.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
+    <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\..\spectrum\packages\System.ValueTuple.4.4.0-preview1-25305-02\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
