--- a/spectrum/ConsoleApp.Test/ConsoleApp.Test.vbproj
+++ b/spectrum/ConsoleApp.Test/ConsoleApp.Test.vbproj
@@ -138,9 +138,9 @@
       <Project>{fecce1fd-e1d4-49e3-a668-60bb5e7aed99}</Project>
       <Name>+Microsoft.VisualBasic.Architecture.Framework</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Massbank\Massbank.vbproj">
+    <ProjectReference Include="..\Massbank\MSMS.Assembly.vbproj">
       <Project>{a686bdf5-077f-47f5-a8dd-c73e6e88363c}</Project>
-      <Name>Massbank</Name>
+      <Name>MSMS.Assembly</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
