--- a/spectrum/spectrum/spectrum.vbproj
+++ b/spectrum/spectrum/spectrum.vbproj
@@ -183,9 +183,9 @@
       <Project>{075e1da3-54ac-4d7c-9d4e-e34aa13910a8}</Project>
       <Name>zlibnet</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Massbank\Massbank.vbproj">
+    <ProjectReference Include="..\Massbank\MSMS.Assembly.vbproj">
       <Project>{a686bdf5-077f-47f5-a8dd-c73e6e88363c}</Project>
-      <Name>Massbank</Name>
+      <Name>MSMS.Assembly</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
