--- a/spectrum/Massbank/MSMS.Assembly.vbproj
+++ b/spectrum/Massbank/MSMS.Assembly.vbproj
@@ -137,6 +137,8 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HMDB\taxonomy.vb" />
+    <Compile Include="HMDB\metabolite.vb" />
     <Compile Include="Massbank\PeakDataHelper.vb" />
     <Compile Include="Massbank\DATA\Model.vb" />
     <Compile Include="Massbank\Model.vb" />
@@ -187,8 +189,6 @@
       <Name>+Microsoft.VisualBasic.Architecture.Framework</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="HMDB\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
