--- a/spectrum/assembly/assembly.vbproj
+++ b/spectrum/assembly/assembly.vbproj
@@ -109,6 +109,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="mzXML\Peaktable.vb" />
     <Compile Include="mzXML\Extensions.vb" />
     <Compile Include="mzXML\Info.vb" />
     <Compile Include="mzXML\MSData.vb" />
