--- a/spectrum/Massbank/MSMS.Assembly.vbproj
+++ b/spectrum/Massbank/MSMS.Assembly.vbproj
@@ -148,6 +148,7 @@
     <Compile Include="Massbank\Model.vb" />
     <Compile Include="Massbank\RecordIO.vb" />
     <Compile Include="Massbank\DATA\Record.vb" />
+    <Compile Include="Statistics.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
