--- a/spectrum/assembly/assembly.vbproj
+++ b/spectrum/assembly/assembly.vbproj
@@ -116,6 +116,7 @@
     <Compile Include="ASCII\MSP\Comments.vb" />
     <Compile Include="ASCII\MSP\MspData.vb" />
     <Compile Include="LibraryMatrix.vb" />
+    <Compile Include="PrecursorType.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
