--- a/spectrum/Massbank/MSMS.Assembly.vbproj
+++ b/spectrum/Massbank/MSMS.Assembly.vbproj
@@ -140,6 +140,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HMDB\disease.vb" />
     <Compile Include="lipidMAPS\MapsHelper.vb" />
     <Compile Include="lipidMAPS\SDF.vb" />
     <Compile Include="XrefEngine.vb" />
