--- a/spectrum/MetabolomeXchange/CLI/CLI.vbproj
+++ b/spectrum/MetabolomeXchange/CLI/CLI.vbproj
@@ -138,6 +138,10 @@
       <Project>{fecce1fd-e1d4-49e3-a668-60bb5e7aed99}</Project>
       <Name>+Microsoft.VisualBasic.Architecture.Framework</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\..\GCModeller\src\runtime\sciBASIC#\mime\application%25json\application.json.vbproj">
+      <Project>{32228818-26F1-44DF-8D40-347136C743CD}</Project>
+      <Name>application.json</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MetabolomeXchange.vbproj">
       <Project>{dd9a07cf-052d-45fd-91e7-e41125227528}</Project>
       <Name>MetabolomeXchange</Name>
