--- a/spectrum/Massbank/MSMS.Assembly.vbproj
+++ b/spectrum/Massbank/MSMS.Assembly.vbproj
@@ -170,15 +170,16 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HMDB\BriefTable.vb" />
-    <Compile Include="HMDB\property.vb" />
-    <Compile Include="HMDB\disease.vb" />
+    <Compile Include="TMIC\FooDB\FoodTable.vb" />
+    <Compile Include="TMIC\HMDB\BriefTable.vb" />
+    <Compile Include="TMIC\HMDB\property.vb" />
+    <Compile Include="TMIC\HMDB\disease.vb" />
     <Compile Include="lipidMAPS\MapsHelper.vb" />
     <Compile Include="lipidMAPS\SDF.vb" />
     <Compile Include="XrefEngine.vb" />
-    <Compile Include="HMDB\Extensions.vb" />
-    <Compile Include="HMDB\taxonomy.vb" />
-    <Compile Include="HMDB\metabolite.vb" />
+    <Compile Include="TMIC\HMDB\Extensions.vb" />
+    <Compile Include="TMIC\HMDB\taxonomy.vb" />
+    <Compile Include="TMIC\HMDB\metabolite.vb" />
     <Compile Include="Massbank\PeakDataHelper.vb" />
     <Compile Include="Massbank\DATA\Model.vb" />
     <Compile Include="Massbank\Model.vb" />
