--- a/spectrum/ProteoWizard.d/ProteoWizard.d.vbproj
+++ b/spectrum/ProteoWizard.d/ProteoWizard.d.vbproj
@@ -64,7 +64,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Server.vb" />
+    <Compile Include="VBServer.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
