--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "ProteoWizard.d::httpd"]
-	path = DATA/ProteoWizard.d/httpd
+[submodule "ProteoWizard.d/httpd"]
+	path = Assembly/ProteoWizard.d/httpd
 	url = https://github.com/xieguigang/SMRUCC.WebCloud.git
