--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,6 @@
 	url = https://github.com/xieguigang/SMRUCC.WebCloud.git
 
 
+[submodule "KEGG-KCF"]
+	path = KEGG-KCF
+	url = git://github.com/chneukirchen/rack.git
