--- a/plot/spectrum-plot.vbproj
+++ b/plot/spectrum-plot.vbproj
@@ -156,6 +156,7 @@
     <Compile Include="CLI\CLI.vb" />
     <Compile Include="Extensions.vb" />
     <Compile Include="Visualize\Canvas.vb" />
+    <Compile Include="Visualize\PeakAssign.vb" />
     <Compile Include="Visualize\spectrumData.vb" />
     <Compile Include="Program.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
