--- a/DATA/Massbank/Massbank.vbproj
+++ b/DATA/Massbank/Massbank.vbproj
@@ -195,14 +195,15 @@
     <Compile Include="TMIC\FooDB\pathways.vb" />
     <Compile Include="TMIC\FooDB\references.vb" />
     <Compile Include="TMIC\HMDB\BriefTable.vb" />
-    <Compile Include="TMIC\HMDB\property.vb" />
-    <Compile Include="TMIC\HMDB\disease.vb" />
+    <Compile Include="TMIC\HMDB\Assembly\property.vb" />
+    <Compile Include="TMIC\HMDB\Assembly\disease.vb" />
     <Compile Include="lipidMAPS\MapsHelper.vb" />
     <Compile Include="SDF\SDF.vb" />
+    <Compile Include="TMIC\HMDB\NameValue.vb" />
     <Compile Include="XrefEngine.vb" />
     <Compile Include="TMIC\HMDB\Extensions.vb" />
-    <Compile Include="TMIC\HMDB\taxonomy.vb" />
-    <Compile Include="TMIC\HMDB\metabolite.vb" />
+    <Compile Include="TMIC\HMDB\Assembly\taxonomy.vb" />
+    <Compile Include="TMIC\HMDB\Assembly\metabolite.vb" />
     <Compile Include="Massbank\PeakDataHelper.vb" />
     <Compile Include="Massbank\DATA\Model.vb" />
     <Compile Include="Massbank\Model.vb" />
