--- a/DATA/ms2_simulator/ms2_simulator.vbproj
+++ b/DATA/ms2_simulator/ms2_simulator.vbproj
@@ -148,10 +148,6 @@
       <Project>{fecce1fd-e1d4-49e3-a668-60bb5e7aed99}</Project>
       <Name>+Microsoft.VisualBasic.Architecture.Framework</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\Assembly\assembly\assembly.vbproj">
-      <Project>{95F7D65E-9DB1-4605-9FD3-25433277AF88}</Project>
-      <Name>assembly</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\KCF\KCF.Graph\KCF.Graph.vbproj">
       <Project>{c60416d4-b3e2-45e5-bfe0-90d5021647f9}</Project>
       <Name>KCF.Graph</Name>
@@ -159,6 +155,10 @@
     <ProjectReference Include="..\..\KCF\KCF.IO\KCF.IO.vbproj">
       <Project>{1bafa2bc-68b2-4ee0-9235-c60fae3377a0}</Project>
       <Name>KCF.IO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ms2_math-core\ms2_math-core.vbproj">
+      <Project>{a2130297-2b4a-4b02-80b2-5cfa860f6dae}</Project>
+      <Name>ms2_math-core</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
